feat: update dashboard for user.
